--- a/src/app/gen-component/gen-component.component.html
+++ b/src/app/gen-component/gen-component.component.html
@@ -1,58 +1,16 @@
-<div>
-  <h1>
-    <strong>{{genTitleName}}</strong>
-  </h1>
-  <h4>
-    <mark>
-    Добро пожаловать, <strong>{{profileName}}</strong>!
-    </mark>
-  </h4>
-  <br>
-  <br>
-  <h4>
-    <button class="btn btn-danger"(click)="openLearning()">Обучение</button>
-    <form *ngIf=isOpenOne>
-      <br>
-      <div class="form-group">
-      <button class="btn btn-danger"(click)="learning">{{topicsAndSections}}</button>
-      <br>
-      <br>
-      <button class="btn btn-danger"(click)="learning">{{topicTasks}}</button>
-      </div>     
-    </form>
-  </h4>
-  <br>
-  <h4>
-    <strong>
-      <button class="btn btn-warning"(click)="openTask()">Тестовые задания</button>
-    </strong>
-    <form *ngIf=isOpenTwo>
-      <br>
-    <div class="form-group">
-    <button class="btn btn-warning"(click)="testTask">{{byTaskNumber}}</button>
-    <br>
-    <br>
-    <button class="btn btn-warning"(click)="testTask">{{exam}}</button>
-    <br>
-    <br>
-    <button class="btn btn-warning"(click)="testTask">{{marathon}}</button>
-    </div>
-    </form>
-  </h4>
-  <br>
-  <h4>
-    <strong>
-    <button class="btn btn-success"(click)="openInfo()">Полезная информация</button>
-    </strong>
-    <form *ngIf=isOpenThree>
-      <br>
-    <div class="form-group">
-    <button class="btn btn-success"(click)="helpInfo">{{traficRules}}</button>
-    <br>
-    <br>
-    <button class="btn btn-success"(click)="helpInfo">{{examInfo}}</button>
-    <br>
-    <br>
-    <button class="btn btn-success"(click)="helpInfo">{{usefulInfo}}</button>
-</div>
-    
+ <p-splitter [style]="{'height': '950px'}" [panelSizes]="[15,80]" [minSizes]="[10,0]" styleClass="mb-5">
+    <ng-template pTemplate>
+              <app-menu></app-menu>
+    </ng-template>
+    <ng-template pTemplate>
+        <p-splitter layout="vertical" [panelSizes]="[15,85]"> 
+            <ng-template pTemplate>
+                  <div>
+                    <h1>Название приложения</h1>
+                    <h4>Место для контента на главной странице</h4>
+                  </div>
+            </ng-template>
+        </p-splitter>
+    </ng-template>
+  </p-splitter>
+  <div>
