--- a/src/app/Components/2. Tasks/exam/exam.component.html
+++ b/src/app/Components/2. Tasks/exam/exam.component.html
@@ -1,1 +1,24 @@
-<p>exam works!</p>
+<p-splitter [style]="{'height': '950px'}" [panelSizes]="[15,80]" [minSizes]="[10,0]" styleClass="mb-5">
+  <ng-template pTemplate>
+            <app-menu></app-menu>
+  </ng-template>
+  <ng-template pTemplate>
+      <p-splitter layout="vertical" [panelSizes]="[20,100]"> 
+          <ng-template pTemplate>
+                <div>
+                  <p-breadcrumb [model] = 'items' [home] = 'home'>
+                  </p-breadcrumb> 
+                  <h1>Экзамен</h1>
+                  <div>
+                    <button pButton  type="button" label = "Стандартный экзамен" class="p-button-outlined"></button>
+                  </div>
+                  <p></p>
+                  <div>
+                    <button pButton  type="button" label = "Новый (+5 вопросов)" class="p-button-outlined"></button>
+                  </div>
+                </div>
+          </ng-template>
+      </p-splitter>
+  </ng-template>
+</p-splitter>
+<div>
