--- a/src/app/Components/3. Info/exam-info/exam-info.component.html
+++ b/src/app/Components/3. Info/exam-info/exam-info.component.html
@@ -1,1 +1,19 @@
-<p>exam-info works!</p>
+<p-splitter [style]="{'height': '950px'}" [panelSizes]="[15,80]" [minSizes]="[10,0]" styleClass="mb-5">
+  <ng-template pTemplate>
+            <app-menu></app-menu>
+  </ng-template>
+  <ng-template pTemplate>
+      <p-splitter layout="vertical" [panelSizes]="[15,85]"> 
+          <ng-template pTemplate>
+                <div>
+                  <p-breadcrumb [model] = 'items' [home] = 'home'>
+                  </p-breadcrumb> 
+                  <h1>Инфомация об экзамене</h1>
+                  <h2>Ты всё сдашь, только не путай право и лево!</h2>
+                  <h5>P.S. ПОВОРОТНИКИ!!!!1!</h5>
+                </div>
+          </ng-template>
+      </p-splitter>
+  </ng-template>
+</p-splitter>
+<div>
