--- a/src/app/Components/3. Info/exam-info/exam-info.component.html
+++ b/src/app/Components/3. Info/exam-info/exam-info.component.html
@@ -6,15 +6,14 @@
       <p-splitter layout="vertical" [panelSizes]="[15,85]"> 
           <ng-template pTemplate>
                 <div>
-                  <h1>Название приложения</h1>
-                  <h4>Место для контента на главной странице</h4>
+                  <p-breadcrumb [model] = 'items' [home] = 'home'>
+                  </p-breadcrumb> 
+                  <h1>Инфомация об экзамене</h1>
+                  <h2>Ты всё сдашь, только не путай право и лево!</h2>
+                  <h5>P.S. ПОВОРОТНИКИ!!!!1!</h5>
                 </div>
           </ng-template>
       </p-splitter>
   </ng-template>
 </p-splitter>
 <div>
-
-
-
-
