--- a/src/app/gen-component/gen-component.component.scss
+++ b/src/app/gen-component/gen-component.component.scss
@@ -1,7 +1,7 @@
 h1{
   text-align: center;
-  background-color: mintcream;
-  font-size: 70px;
+  /* background-color: mintcream; */
+  font-size: 65px;
 }
 h4{
   font-size: 40px;
