--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,1 +1,37 @@
-<p>account works!</p>
+<p-splitter [style]="{'height': '950px'}" [panelSizes]="[15,80]" [minSizes]="[10,0]" styleClass="mb-5">
+  <ng-template pTemplate>
+            <app-menu></app-menu>
+  </ng-template>
+  <ng-template pTemplate>
+      <p-splitter layout="vertical" [panelSizes]="[15,85]">
+          <ng-template pTemplate>
+                <div>
+                    <p-breadcrumb [model] = 'items' [home] = 'home'></p-breadcrumb>
+                  <div class="card">
+                    <div class="grid formgrid">
+                        <div class="field col-12 md:col-6 md:pr-6 pr-0">
+                            <h2>Мой профиль</h2>
+                            <div class="custom-skeleton p-4">
+                                <div class="flex mb-3">
+                                    <p-skeleton shape="circle" size="4rem" styleClass="mr-2"></p-skeleton>
+                                    <div>
+                                        <p-skeleton width="15rem" styleClass="mb-2"></p-skeleton>
+                                        <p-skeleton width="10rem" styleClass="mb-2"></p-skeleton>
+                                        <p-skeleton height="1rem"></p-skeleton>
+                                    </div>
+                                </div>
+                                <p-skeleton width="100%" height="150px"></p-skeleton>
+                                <div class="flex justify-content-between mt-3">
+                                    <p-skeleton width="4rem" height="2rem"></p-skeleton>
+                                    <p-skeleton width="4rem" height="2rem"></p-skeleton>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+          </ng-template>
+      </p-splitter>
+  </ng-template>
+</p-splitter>
+<div>
