Modified Learning Components. Added a document with project tasks.

--- a/src/app/Components/1. Learning/learning/learning.component.html
+++ b/src/app/Components/1. Learning/learning/learning.component.html
@@ -13,17 +13,25 @@
           <ng-template pTemplate>
               <div class="col flex align-items-center justify-content-center">
                 <div>
-                  <p-breadcrumb [model] = 'items' [home] = 'home'>
-                  </p-breadcrumb> 
+                  <p-breadcrumb [model] = 'items' [home] = 'home'></p-breadcrumb> 
+                  <h1>
+                    Обучение
+                  </h1>
+                  <h3>
+                    Продолжить обучение <баттон хреф темы и разделы>
+                  </h3>
+                  <h3>
+                    Пройти задания по темам <баттон хреф задания в конце раздела>
+                  </h3>
+                  <h2>
+                    Прогресс обучения TypeORM
+                    Таблица, забить + вывод
+                  </h2>
                 </div>
               </div>
-          </ng-template>
-          <ng-template pTemplate>
-              <h4>
-                Место для контента
-              </h4>
+              <div>  
+              </div>
         </ng-template>
       </p-splitter>
   </ng-template>
 </p-splitter>
-<div>
